--- a/about.html
+++ b/about.html
@@ -18,22 +18,40 @@
       <div id="logo"><h1>COOL<a href="index.html">SANDIE</a>ONLINE</h1></div>
       <nav>
         <ul class="lavaLampWithImage" id="lava_menu">
-          <li class="current"><a href="index.html"><u>Home</u></a></li>
+          <li><a href="index.html"><u>Home</u></a></li>
           <li><a href="works.html"><u>My Works</u></a></li>
           <li><a href="http://www.coolsandie.blogspot.in"><u>Blog</u></a></li>
-		  <li><a href="about.html"><u>About</u></a></li>
+		  <li class="current"><a href="about.html"><u>About</u></a></li>
         </ul>
       </nav>
     </header>
 		<div id="site_content">
 		<div id="content"> 
-         <h1><u>Welcome to my website</u></h1>
+         <h1><u>About Me</u></h1>
 		 <p></p>
-         <p>This site is literally started for fun, I mean, just for fun, duh! But will showcase the works/tutorials I've been posted to XDA-Developers forum, while I was being
-		   an Android fanatic, still I am though! So that would be the main point of this website, rather than being complete pointless. Please head over to the
-		   <a href="works.html">My Works</a> section to see all my works posted till date, Thanks!</p>
+        <p>My name is Sandeep, and have a high interest in tech stuffs and became highly interested in Android, once I owned an Android device. I never left
+		the path of Android since then. Web technologies was my prime interest before I was hooked up with Android. Interest in technologies and computers was the 
+		main reason I opted for Masters in Computer Applications (MCA) after graduated in Commerce.</p>
+		   <h2><u><p>Here are my list of Profiles:</p></u></h2>
 		   <br>
-		<p><center><img src="images/banner.png"></img></center></p>
+		   <div class="actions button-container">
+    <a href="https://www.twitter.com/coolsandie" class="button primary pill">Follow Me on Twitter</a>
+    
+    <div class="button-group">
+        <a href="http://forum.xda-developers.com/member.php?u=4308322" class="button icon user">XDA-Developers Profile</a>
+        <a href="https://www.github.com/coolsandie" class="button icon fork">Github</a>
+        <a href="http://d-h.st/users/coolsandie" class="button icon loop">Dev-Host</a>
+    </div>
+	</div>
+		<br>
+		<br>
+		<h2><u><p>Credits:</p></u></h2>
+		<ul>
+		<li><a href="http://css3templates.co.uk">CSS3templates</a> for website design template licensed under 
+		<a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0 Licence</a>.</li>
+		<li><a href="http://pages.github.com/">Github Pages</a> for providing a free static website hosting.</li>
+		</ul>
+        <p><center><img src="images/banner.png"></img></center></p>
 		<br>
 		<br>
         </div>
