Added PM link on XDA

--- a/about.html
+++ b/about.html
@@ -42,6 +42,9 @@
         <a href="https://www.github.com/coolsandie" class="button icon fork">Github</a>
         <a href="http://d-h.st/users/coolsandie" class="button icon loop">Dev-Host</a>
     </div>
+	<div class="button-group">
+		<a href="http://forum.xda-developers.com/private.php?do=newpm&u=4308322" class="button icon mail">Contact me @ XDA</a>
+	</div>
 	</div>
 		<br>
 		<br>
@@ -51,6 +54,7 @@
 		<a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0 Licence</a>.</li>
 		<li><a href="http://pages.github.com/">Github Pages</a> for providing a free static website hosting.</li>
 		</ul>
+		<br>
         <p><center><img src="images/banner.png"></img></center></p>
 		<br>
 		<br>
