--- a/works.html
+++ b/works.html
@@ -44,6 +44,10 @@
 		   <li><a href="http://forum.xda-developers.com/showthread.php?t=2124002">List of all Open-Source Android apps</a> is a huge list spanning all of
 		   the Android apps which are open sourced and are published in the Google Play Store or otherwise. A short description with links to source code
 		   makes it easy to browse/fork/making changes to the app convenient to the fresh developers.</li>
+		   <br>
+		   <li><a href="http://forum.xda-developers.com/showpost.php?p=45376173&postcount=1237">1% battery icons on Statusbar</a> is a mod on the SystemUI.apk 
+		   to enable percentage increments/decrements on every numbers rather than provided by default by the android. Made for Karbonn A15 running Android
+		   4.0.4.</li>
 		   </ul>
 		   <br>
         <p><center><img src="images/banner.png"></img></center></p>
