--- a/about.html
+++ b/about.html
@@ -42,6 +42,9 @@
         <a href="https://www.github.com/coolsandie" class="button icon fork">Github</a>
         <a href="http://d-h.st/users/coolsandie" class="button icon loop">Dev-Host</a>
     </div>
+	<div class="button-group">
+        <a href="http://forum.xda-developers.com/private.php?do=newpm&u=4308322" class="button icon mail">Contact me @ XDA</a>
+    </div>
 	</div>
 		<br>
 		<br>
