--- a/about.html
+++ b/about.html
@@ -53,6 +53,7 @@
 		<li><a href="http://css3templates.co.uk">CSS3templates</a> for website design template licensed under 
 		<a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0 Licence</a>.</li>
 		<li><a href="http://pages.github.com/">Github Pages</a> for providing a free static website hosting.</li>
+        <li><a href="https://github.com/necolas/css3-github-buttons">CSS3 Github buttons</a> for Github style'd buttons.</li>
 		</ul>
 		<br>
         <p><center><img src="images/banner.png"></img></center></p>
@@ -63,7 +64,7 @@
     
 	<footer>
       <p><a href="index.html">Home</a> | <a href="https://www.twitter.com/coolsandie">Twitter</a> | <a href="https://www.github.com/coolsandie">Github</a>
-      <p>&copy; 2013 Sandeep. All Rights Reserved.</p>
+      <p>&copy; 2014 Sandeep. All Rights Reserved.</p>
     </footer>
   </div>
   <!-- javascript at the bottom for fast page loading -->
