Added Launcher mod work on A12+ and changed copyright to 2014

--- a/works.html
+++ b/works.html
@@ -48,6 +48,10 @@
 		   <li><a href="http://forum.xda-developers.com/showpost.php?p=45376173&postcount=1237">1% battery icons on Statusbar</a> is a mod on the SystemUI.apk 
            to enable percentage increments/decrements on every numbers rather than provided by default by the android. Made for Karbonn A15 running Android
            4.0.4.</li>
+           <br>
+           <li><a href="http://forum.xda-developers.com/showpost.php?p=47384634&postcount=5">Modified Stock Launcher for Karbonn A12+</a> is a small icon modification
+            performed on the stock AOSP Launcher where the ICS style 'App drawer' button is replaced with KitKat style transparent one and also the Folder previews 
+            too is changed to that of Kitkat one. Also the Google search omni bar is also replaced to that of Jellybean one.</li>
 		   </ul>
 		   <br>
         <p><center><img src="images/banner.png"></img></center></p>
@@ -58,7 +62,7 @@
     
 	<footer>
       <p><a href="index.html">Home</a> | <a href="https://www.twitter.com/coolsandie">Twitter</a> | <a href="https://www.github.com/coolsandie">Github</a>
-      <p>&copy; 2013 Sandeep. All Rights Reserved.</p>
+      <p>&copy; 2014 Sandeep. All Rights Reserved.</p>
     </footer>
   </div>
   <!-- javascript at the bottom for fast page loading -->
