Fix: Footer links open in new tab instead of same tab

--- a/works.html
+++ b/works.html
@@ -61,7 +61,7 @@
     </div> 
     
 	<footer>
-      <p><a href="index.html">Home</a> | <a href="https://www.twitter.com/coolsandie">Twitter</a> | <a href="https://www.github.com/coolsandie">Github</a>
+      <p><a href="index.html">Home</a> | <a href="https://www.twitter.com/coolsandie" target="_blank">Twitter</a> | <a href="https://www.github.com/coolsandie" target="_blank">Github</a>
       <p>&copy; 2014 Sandeep. All Rights Reserved.</p>
     </footer>
   </div>
