Fix: Buttons/Footer links redirect to new tab instead of same tab

--- a/about.html
+++ b/about.html
@@ -35,15 +35,15 @@
 		   <h2><u><p>Here are my list of Profiles:</p></u></h2>
 		   <br>
 		   <div class="actions button-container">
-    <a href="https://www.twitter.com/coolsandie" class="button primary pill">Follow Me on Twitter</a>
+    <a href="https://www.twitter.com/coolsandie" class="button primary pill" target="_blank">Follow Me on Twitter</a>
     
     <div class="button-group">
-        <a href="http://forum.xda-developers.com/member.php?u=4308322" class="button icon user">XDA-Developers Profile</a>
-        <a href="https://www.github.com/coolsandie" class="button icon fork">Github</a>
-        <a href="http://d-h.st/users/coolsandie" class="button icon loop">Dev-Host</a>
+        <a href="http://forum.xda-developers.com/member.php?u=4308322" class="button icon user" target="_blank">XDA-Developers Profile</a>
+        <a href="https://www.github.com/coolsandie" class="button icon fork" target="_blank">Github</a>
+        <a href="http://d-h.st/users/coolsandie" class="button icon loop" target="_blank">Dev-Host</a>
     </div>
 	<div class="button-group">
-        <a href="http://forum.xda-developers.com/private.php?do=newpm&u=4308322" class="button icon mail">Contact me @ XDA</a>
+        <a href="http://forum.xda-developers.com/private.php?do=newpm&u=4308322" class="button icon mail" target="_blank">Contact me @ XDA</a>
     </div>
 	</div>
 		<br>
@@ -63,7 +63,7 @@
     </div> 
     
 	<footer>
-      <p><a href="index.html">Home</a> | <a href="https://www.twitter.com/coolsandie">Twitter</a> | <a href="https://www.github.com/coolsandie">Github</a>
+      <p><a href="index.html">Home</a> | <a href="https://www.twitter.com/coolsandie" target="_blank">Twitter</a> | <a href="https://www.github.com/coolsandie" target="_blank">Github</a>
       <p>&copy; 2014 Sandeep. All Rights Reserved.</p>
     </footer>
   </div>
