--- a/about.html
+++ b/about.html
@@ -50,10 +50,10 @@
 		<br>
 		<h2><u><p>Credits:</p></u></h2>
 		<ul>
-		<li><a href="http://css3templates.co.uk">CSS3templates</a> for website design template licensed under 
-		<a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0 Licence</a>.</li>
-		<li><a href="http://pages.github.com/">Github Pages</a> for providing a free static website hosting.</li>
-        <li><a href="https://github.com/necolas/css3-github-buttons">CSS3 Github buttons</a> for Github style'd buttons.</li>
+		<li><a href="http://css3templates.co.uk" target="_blank">CSS3templates</a> for website design template licensed under 
+		<a href="http://creativecommons.org/licenses/by/3.0" target="_blank">Creative Commons Attribution 3.0 Licence</a>.</li>
+		<li><a href="http://pages.github.com/" target="_blank">Github Pages</a> for providing a free static website hosting.</li>
+        <li><a href="https://github.com/necolas/css3-github-buttons" target="_blank">CSS3 Github buttons</a> for Github style'd buttons.</li>
 		</ul>
 		<br>
         <p><center><img src="images/banner.png"></img></center></p>
